--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,3 +13,10 @@
 		</div>
 	</div>
 </div>
+
+<h3>Q: What will I see?</h3>
+<p>Something like this, but in realtime.</p>
+<img src="images/demo.png"/>
+
+<h3>Q: Where's the code?</h3>
+<p>Comming soon</p>
