Added json2jsonp conversion notice

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,8 +15,14 @@
 </div>
 
 <h3>Q: What will I see?</h3>
-<p>Something like this, but in realtime.</p>
+<p>Something like this, updating in realtime.</p>
 <img src="http://i.imgur.com/B2E91yt.png" width="100%"/>
+
+<h3>Q: What versions of hadoop are supported?</h3>
+<p>2.0 and above, some versions of 1.x that support JSONP.</p>
+<p>Older version? You'll need to run a 
+	<a href="https://github.com/chrili/jsonpwrapper.com">json-to-jsonp converter</a> 
+	in your internal network. Public version: <a href="http://json2jsonp.herokuapp.com/">demo</a>. </p>
 
 <h3>Q: Where's the code?</h3>
 <p><a href="https://github.com/chrili/hadoopmonitor">github</a></p>
