--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,13 @@
 <div class="jumbotron">
-	<h3>Get Started:</h3>
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-4">
+			<img src="images/logo@2x.png"/>
+			<div class="subheading">Realtime monitoring tool for Hadoop</div>
+			<a class="btn btn-default btn-sm">Learn More</a>
+		</div>
+		<div class="col-md-7 col-md-offset-1">
+			<h2>Get Started</h2>
+			<p>Enter the URL to your Namenode's webUI</p>
 			<form ng-submit="goToAddress()">
 				<div class="input-group">
 					<input type="text" class="form-control" placeholder="Address e.g. http://localhost:50070/jmx" ng-model="address"/>
@@ -13,16 +19,3 @@
 		</div>
 	</div>
 </div>
-
-<h3>Q: What will I see?</h3>
-<p>Something like this, updating in realtime.</p>
-<img src="http://i.imgur.com/B2E91yt.png" width="100%"/>
-
-<h3>Q: What versions of hadoop are supported?</h3>
-<p>2.0 and above, some versions of 1.x that support JSONP.</p>
-<p>Older version? You'll need to run a 
-	<a href="https://github.com/chrili/jsonpwrapper.com">json-to-jsonp converter</a> 
-	in your internal network. Public version: <a href="http://json2jsonp.herokuapp.com/">demo</a>. </p>
-
-<h3>Q: Where's the code?</h3>
-<p><a href="https://github.com/chrili/hadoopmonitor">github</a></p>
