--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <div class="jumbotron">
 	<div class="row">
 		<div class="col-md-4">
-			<img src="images/logo@2x.png"/>
+			<img src="images/logo.png"/>
 			<div class="subheading">Realtime monitoring tool for Hadoop</div>
-			<a class="btn btn-default btn-sm">Learn More</a>
+			<a href="#/faq" class="btn btn-default">Learn More</a>
 		</div>
 		<div class="col-md-7 col-md-offset-1">
 			<h2>Get Started</h2>
