--- a/app/views/plots.html
+++ b/app/views/plots.html
@@ -6,8 +6,29 @@
 
 
 	<h1>Plots</h1>
-	<plot ng-repeat="path in plots()" path="path"></plot>
-	<div ng-hide="plots().length" class="alert alert-warning">
+	<div ng-hide="plots.length" class="alert alert-warning">
 		<strong>No beans selected.</strong> <a href="#/beans">Select</a> some beans first.
+	</div>
+
+	<div ng-repeat="plot in plots" ng-controller="PlotCtrl" ng-init="plot=plot">
+		<h3>
+			{{PlotCtrl.formattedPath()}}
+			<div class="btn-group">
+				<button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
+					Edit <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu">
+					<li><a class="pointable" ng-click="PlotCtrl.toggleDetails()">{{titleForToggleDetails()}}</a></li>
+					<li class="divider"></li>
+					<li><a class="pointable" ng-click="PlotsCtrl.removePlot(plot)">Remove Plot</a></li>
+				</ul>
+			</div>
+		</h3>
+
+		<div class="details" ng-show="plot.show_details">
+			Most Recent Value=<code>{{PlotCtrl.mostRecentValue()}}</code> Mean=<code>3.3</code>
+		</div>
+
+		<plot path="plot.key"></plot>
 	</div>
 </div>
