Update URL on config change

--- a/app/views/plots.html
+++ b/app/views/plots.html
@@ -26,7 +26,7 @@
 		</h3>
 
 		<div class="details" ng-show="plot.show_details">
-			Most Recent Value=<code>{{PlotCtrl.mostRecentValue()}}</code> Mean=<code>3.3</code>
+			Most Recent Value=<code>{{PlotCtrl.mostRecentValue()}}</code>
 		</div>
 
 		<plot path="plot.key"></plot>
