--- a/app/views/plots.html
+++ b/app/views/plots.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-controller="RefreshCtrl">
 	<div ng-show="JmxRefresher.error" class="alert alert-danger">
 		<h5>Uh oh.</h5>
 		<p>{{JmxRefresher.error}}</p>
