--- a/app/views/beans.html
+++ b/app/views/beans.html
@@ -7,7 +7,7 @@
 	<div class="col-lg-6">
 		<h1>Available Beans</h1>
 		<div ng-controller="ConfigCtrl">
-			<p class="lead">{{settings.url}} <small><a href="/">edit</a></small></p>
+			<p class="lead">{{settings.url}}</p>
 		</div>
 
 		<p>Expand the tree below, and select the attributes you want to plot. Then click "View Plot" above.</p>
