--- a/app/views/beans.html
+++ b/app/views/beans.html
@@ -27,6 +27,10 @@
 				</tbody>
 			</table>
 		</div>
+
+		<div ng-controller="NavCtrl">
+			<a class="btn btn-primary" ng-click="goToBookmarkableUrl('plots')">Proceed to Plots <i class="fa fa-chevron-circle-right"></i></a>
+		</a>
 	</div>
 
 </div>
