--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<img src="images/logo.png"/>
-			<div class="subheading">Realtime monitoring tool for Hadoop</div>
+			<div class="subheading">Realtime monitoring for Hadoop</div>
 			<a href="#/faq" class="btn btn-default">Learn More</a>
 		</div>
 		<div class="col-md-7 col-md-offset-1">
