--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,3 +27,53 @@
 		</div>
 	</div>
 </div>
+
+
+<hr/>
+
+<div class="row">
+	<div class="col-md-12">
+		<h2>Overview</h2>
+	</div>
+	<div class="col-md-6">
+		<h4>HPulse does not:</h4>
+		<p><span class="emph-danger">✘</span> Remember data from months ago forever in HDFS</p>
+		<p><span class="emph-danger">✘</span> Do any learning, try to be clever</p>
+		<p><span class="emph-danger">✘</span> Modify the cluster</p>
+	</div>
+	<div class="col-md-6">
+		<h4>HPulse does:</h4>
+		<p><span class="emph">✓</span> Present data from minutes ago to <span class="emph">now</span></p>
+		<p><span class="emph">✓</span> Provide sub-second sampling to catch transient events</p>
+		<p><span class="emph">✓</span> Work with any compatable Hadoop install (see <a href="#/faq">FAQ</a>)</p>
+	</div>
+</div>
+
+<hr/>
+
+<div class="row">
+	<div class="col-md-4">
+		<h4>Endpoints</h4>
+		<p>Things HPulse can monitor:</p>
+		<ul>
+			<li>Namenode</li>
+			<li>Resource Manager/JobTracker</li>
+			<li>Datanode</li>
+			<li>Node Manager/TaskTracker</li>
+		</ul>
+		<p>Just enter the web address followed by <code>/jmx</code></p>
+	</div>
+	<div class="col-md-4">
+		<h4>Deep Linking</h4>
+		<p>Once you get started, the URL will contain all the information needed to rehydrate the view.</p>
+		<p>Share by email, wiki, etc</p>
+	</div>
+	<div class="col-md-4">
+		<h4>Project</h4>
+		<p>HPulse is Open Source, licensed under Apache 2.0.</p>
+		<a href="https://github.com/ebay/hpulse" class="btn btn-default">
+			<i class="fa fa-github fa-lg"></i>
+			View Project on Github
+		</a>
+	</div>
+</div>
