--- a/app/views/config.html
+++ b/app/views/config.html
@@ -9,8 +9,8 @@
 
         <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label for="jmx-url" class="col-sm-2 control-label">JMX URL</label>
-            <div class="col-sm-8">
+            <label for="jmx-url" class="col-sm-4 control-label">JMX URL</label>
+            <div class="col-sm-6">
               <input type="text" class="form-control" id="jmx-url" ng-model="copy.url" disabled>
             </div>
             <div class="col-sm-2" ng-controller="NavCtrl">
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="refresh-period" class="col-sm-2 control-label">Refresh Period</label>
+            <label for="refresh-period" class="col-sm-4 control-label">Refresh Period</label>
             <div class="col-sm-3">
               <div class="input-group">
                 <input type="number" class="form-control" id="refresh-period" ng-model="copy.refresh">
@@ -27,12 +27,18 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="seconds-to-remember" class="col-sm-2 control-label">Seconds to Plot</label>
+            <label for="seconds-to-remember" class="col-sm-4 control-label">Seconds to Plot</label>
             <div class="col-sm-3">
               <div class="input-group">
                 <input type="number" class="form-control" id="seconds-to-remember" ng-model="copy.seconds_to_remember">
                 <span class="input-group-addon">sec</span>
               </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="note" class="col-sm-4 control-label">Leave a Note (optional)</label>
+            <div class="col-sm-8">
+                <textarea class="form-control" rows="2" id="note" ng-model="copy.note"></textarea>
             </div>
           </div>
 
